# FactoryMicTest

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/mario/factorymictest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bd_mic_detect_api.h  bds_audio_client_api.h  bds_audio_client_cmd.h  bds_audio_client_event.h  bds_audio_client_param.h  native-lib.cpp
app/src/main/java/com/mario/factorymictest/jni/: FactoryMicTestJNI.kt
app/src/main/java/com/mario/factorymictest/presenter/: FactoryMicTestPresenter.kt  IBDSpiReturnMsgListener.kt
app/src/main/java/com/mario/factorymictest/view/: IView.kt  MainActivity.kt
app/src/main/res/drawable/: selector_button.xml  shape_button.xml  shape_button_focus.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mario/factorymictest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
